--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             
             .center{
             padding:100px;
-                             background-image:url('img/paper.jpg');
+                             background-image:url('paper.jpg');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
