--- a/products.html
+++ b/products.html
@@ -117,7 +117,9 @@
          <img src="pic11.jpg" alt="">
          <hr>
          <img src="pic14.jpg" alt="">
-         
+          <hr>
+         <img src="new.jpg"height =250px length=100px  alt="a picture ">
+         <hr>
          <hr>
          <h1 id="skirts">Skirts</h1>
          <hr>
