--- a/products.html
+++ b/products.html
@@ -121,6 +121,10 @@
          <img src="new.jpg"height =250px length=100px  alt="a picture ">
          <hr>
          <hr>
+         <h1 id="tote">Tote bag</h1>
+         <hr>
+         <img src="new4.jpg" alt="">
+              <hr>
          <h1 id="skirts">Skirts</h1>
          <hr>
          <img src="pic12.jpg" alt="">
