--- a/products.html
+++ b/products.html
@@ -74,10 +74,11 @@
    
     <nav>
      <ul>
-    <li><a href="index.html"> Home</a></li>
+    
     <li><a  href="#tops">Tops</a></li>
     <li><a href="#sets">Sets</a></li>
     <li><a href="#skirts">skirts</a></li>
+    <li><a href="#tote"> Bags</a></li>
      </ul>
     </nav>
    </div>
