--- a/products.html
+++ b/products.html
@@ -33,7 +33,9 @@
         
      header li {
         display:inline;
-        padding:0.625rem;     } 
+        padding:0.625rem;  
+        Text-align:center;
+   } 
         
         header a {
             text-decoration:none;
