--- a/products.html
+++ b/products.html
@@ -123,7 +123,7 @@
   -->
       <h1 id="sets"> Bikini sets</h1>
       <hr>
-<div class="leg"> <img name="slide2" width="100%" height ="100%"></div>
+<div class="leg"> <img name="revenant" width="100%" height ="100%"></div>
          <!--   <img src="pic1.jpg"height =250px length=100px  alt="a picture ">
          <hr>
          <img src="pic11.jpg" alt="">
