--- a/products.html
+++ b/products.html
@@ -40,6 +40,7 @@
         header a {
             text-decoration:none;
             color: white;
+Text-align:center;
         }
         
         .try{
