--- a/products.html
+++ b/products.html
@@ -61,7 +61,9 @@ Text-align:center;
         font-family: 'Brush Script MT',cursive;}
        
        
-       img{ height:250px ;
+       img{ 
+max-width:100%;
+height:250px ;
        length:100px}
         footer{
             background-color:brown;
