--- a/products.html
+++ b/products.html
@@ -41,7 +41,13 @@
       <h1 id="sets"> Bikini sets</h1>
       <hr>
 
-        
+        <hr>
+         <img src="pic1.jpg"  alt="a bikini">
+         <hr>
+         <img src="pic11.jpg" alt="a bikini">
+         <hr>
+         <img src="pic14.jpg" alt="a bikini">
+         
          <hr>
          <h1 id="tote">Tote bag</h1>
          <hr>
