--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
         header{background-color:black;
             color:white;
             padding:1.25rem;
-            border-bottom:white 01px solid;}
+            border-bottom:white 01px solid;
+            Text-align:center;}
         header h1{margin :0.625rem;
                   padding:1.875rem;
                   Text-align:center;
@@ -25,13 +26,14 @@
             background-repeat:no-repeat;
             background-position:center;
             background-size:cover;
-            background-attachemnt:fixed;
+            Height:100%;
             overflow:hidden;}
        
        footer{background-color:magenta;
             Text-align:center;
             padding:3.125rem;
-            border:1px solid;}
+            border:1px solid;
+}
   </style>
 </head>
 <body>
