--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             background-repeat:no-repeat;
             background-position:center;
             background-size:cover;
-            Height:100%;
+            Height:25vh;
             overflow:hidden;}
        
        footer{background-color:magenta;
