--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         span{font-family:'Times New Roman',serif    }
         .spa{font-family:serif;}
         footer{background-color:brown;
+Position:absolute;
             Text-align:center;
             padding:3.125rem; 
             border-bottom:10px brown solid;     }
