--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         span{font-family:'Times New Roman',serif    }
         .spa{font-family:serif;}
         footer{background-color:brown;
-Position:absolute;
+Width:100%;
+Height:25vh;
             Text-align:center;
             padding:3.125rem; 
             border-bottom:10px brown solid;     }
