--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
             Text-align:center; 
             border:2px white solid;}
            .title{color:pink;
+Max-width:100%;
         font-family: 'Brush Script MT',cursive;}
         span{font-family:'Times New Roman',serif    }
         .spa{font-family:serif;}
         footer{background-color:brown;
-Width:100%;
+Max-width:100%;
 Height:25vh;
             Text-align:center;
             padding:3.125rem; 
