--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@ Max-width:100%;
         span{font-family:'Times New Roman',serif    }
         .spa{font-family:serif;}
         footer{background-color:brown;
+Text-align:center;
 Max-width:100%;
-Height:25vh;
+Height:15vh;
             Text-align:center;
             padding:3.125rem; 
             border-bottom:10px brown solid;     }
