--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Height:15vh;
      <ul>
     <li><a href="index.html"> home</a></li>
     <li><a href="about.html">about</a></li>
-    <li><a href="products.html">products</a></li>
+    <li><a href="products.html">Showcase</a></li>
      </ul>
     </nav>
    </div>
