--- a/products.html
+++ b/products.html
@@ -37,12 +37,9 @@
 <div class="leg"> <img name="slide"></div>
             <hr>
             <h1 id="sets"> Bikini sets</h1>
-        <hr>
-         <img src="pic1.jpg"  alt="a bikini">
-         <hr>
-         <img src="pic11.jpg" alt="a bikini">
-         <hr>
-         <img src="pic14.jpg" alt="a bikini">
+            <hr>
+<div class="leg"> <img name="two"></div>
+            <hr>
          
          <hr>
          <h1 id="tote">Tote bag</h1>
