--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         header li{display:inline;
                   padding:1.25rem;} 
         header a {text-decoration:none;
+Text-align:center;
                   color: white;}
          .try{padding:3.125rem;
             color: white;
