--- a/index.html
+++ b/index.html
@@ -4,45 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content ="width =device-width,initial-scale=1">
     <title>ellecrotchet</title>
-    <style>
-      body{background-color:black;}
-      header{padding-top:1.875rem;
-            min-height:4.375rem;
-            background-color:black;
-            color:white;
-            padding:1.25rem;
-            border-bottom:pink 3px solid; 
-            margin:auto;
-            overflow:hidden;  
-            Text-align:center;}
-        header h1{margin:0.625rem;
-        padding:1.875rem;
-        Text-align:center;
-        color:white;
-        font-weight:bold;}
-        header li{display:inline;
-                  padding:1.25rem;} 
-        header a {text-decoration:none;
-Text-align:center;
-                  color: white;}
-         .try{padding:3.125rem;
-            color: white;
-            background-color:black;
-            Text-align:center; 
-            border:2px white solid;}
-           .title{color:pink;
-Max-width:100%;
-        font-family: 'Brush Script MT',cursive;}
-        span{font-family:'Times New Roman',serif    }
-        .spa{font-family:serif;}
-        footer{background-color:brown;
-Text-align:center;
-Max-width:100%;
-Height:15vh;
-            Text-align:center;
-            padding:3.125rem; 
-            border-bottom:10px brown solid;     }
- </style>
+<link rel="stylesheet" href="ellem.css">
+    
 </head>
 <body>
  <header> 
