--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
    </div>
   </header>
   <section>
-   <div class="try">
+   <div class="showcase">
            <hr>
            <h1 id="tops">TOPS</h1>
            <hr>
