--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
  <header> 
   <div>
-   <h1><span>elle crotchet</span></h1>
+   <h1 class="title">elle crotchet</h1>
    <hr>
    <nav>
      <ul>
