--- a/about.html
+++ b/about.html
@@ -16,8 +16,9 @@
                   padding:1.875rem;
                   Text-align:center;
                   color:white;}
-        header li {display:inline;
-                   padding:1.25rem;} 
+        header ul li {display:inline;
+                      padding:1.25rem;
+                      Text-align:center;} 
         
         header a {text-decoration:none;
                   color: white;}
@@ -32,8 +33,7 @@
        footer{background-color:magenta;
             Text-align:center;
             padding:3.125rem;
-            border:1px solid;
-}
+            border:1px solid;}
   </style>
 </head>
 <body>
