--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="try">
      <h1 class="spa">WHAT I MAKE</h1>
      <h4>BRALLETES</h4>
-     <img src="pic1.jpg"height =250px alt="a picture"> 
+     <img src="pic1.jpg"height =250px  width="100%"alt="a picture"> 
      <hr> 
      <img src="pic2.jpg"height =250px alt="a picture"> 
      <hr>
