--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="try">
      <h1 class="spa">WHAT I MAKE</h1>
      <h4>BRALLETES</h4>
-     <img src="pic1.jpg"height =250px  width="100%"alt="a picture"> 
+     <img src="pic1.jpg"height =250px  width="100%"alt="A bikini"> 
      <hr> 
-     <img src="pic2.jpg"height =250px alt="a picture"> 
+     <img src="pic2.jpg"height =250px alt="A bra"> 
      <hr>
-     <img src="pic5.jpg"height =250px length=100px alt="a picture"> 
+     <img src="pic5.jpg"height =250px length=100px alt="A bra"> 
     </div>
    </section>
    <section > 
