--- a/products.html
+++ b/products.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content ="width =device-width,initial-scale=1">
-    <link rel="stylesheet" href="ellem.css">
+   <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="revisit-after" content="30 days">
+    <meta name="description" content="Welcome to my aesthetic crochet business, where I create handmade, one-of-a-kind pieces for customers who appreciate the artistry and craftsmanship of crochet. We make our products using acrylic  and yarns sourced  right here in kenya to create beautiful and unique pieces that are both functional and stylish. From cozy brallets and scarves to delicate Bikini's we offer a wide range of crochet products that are perfect for any occasion or setting. In addition to our ready-made products, we also offer custom orders and personalized designs to meet the specific needs and preferences of our customers Whether you're looking for a special gift or a beautiful addition , our crochet creations are sure to impress. Shop with us today !">
+<meta name="keywords" content="crotchet, handmade, kenya,custom,showcase,photo gallery">
+
+ <link rel="stylesheet" href="ellem.css">
     <title>ellecrotchet</title>
     
 </head>
@@ -32,21 +38,21 @@
   <section>
    <div class="showcase">
            <hr>
-           <h1 id="tops">TOPS</h1>
+           <h2 id="tops">TOPS</h2>
            <hr>
 <div class="leg"> <img name="slide"></div>
             <hr>
-            <h1 id="sets"> Bikini sets</h1>
+            <h2 id="sets"> Bikini sets</h2>
             <hr>
 <div class="leg"> <img name="two"></div>
             <hr>
          
          <hr>
-         <h1 id="tote">Tote bag</h1>
+         <h2 id="tote">Tote bag</h2>
          <hr>
          <img src="new4.jpg" alt="">
               <hr>
-         <h1 id="skirts">Skirts</h1>
+         <h2 id="skirts">Skirts</h2>
          <hr>
          <img src="pic12.jpg" alt="">
        </div>        
