--- a/products.html
+++ b/products.html
@@ -57,6 +57,12 @@
          <img src="pic12.jpg" alt="">
        </div>        
    </section>
+   <section><div id="myButton"class="button">Contact  us
+  <a href="https://instagram.com/slay_collection?igshid=ZDdkNTZiNTM=">Instagram</a>
+  <a href="">WhatsApp</a>
+  <a href="mailto:sheilakibira5@gmail.com">Email</a>
+</div>
+</section>
         <footer>
         <h6>IFADAA WEB DESIGN COPYRIGHT  @2023</h6>
         </footer>
