--- a/products.html
+++ b/products.html
@@ -51,9 +51,9 @@
    </section>
    <section>
 <div id="myButton"class="button">Contact  us
-  <a href="https://instagram.com/slay_collection?igshid=ZDdkNTZiNTM=">Instagram</a>
+  <a href="https://instagram.com/ellecrochet._?igshid=YmMyMTA2M2Y=">Instagram</a>
   <a href="">WhatsApp</a>
-  <a href="mailto:sheilakibira5@gmail.com">Email</a>
+  <a href="mailto:ellecrochet20@gmail.com">Email</a>
 </div>
 </section>
   <footer>
