--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
    <section>
 <div id="myButton"class="button">Contact  us
   <a href="https://instagram.com/ellecrochet._?igshid=YmMyMTA2M2Y=">Instagram</a>
-  <a href="">WhatsApp</a>
+  <a href="https://wa.me/254110448686?text=I'm%20interested%20in%20buying%20a%crochet">WhatsApp</a>
   <a href="mailto:ellecrochet20@gmail.com">Email</a>
 </div>
 </section>
