--- a/products.html
+++ b/products.html
@@ -33,20 +33,20 @@
            <hr>
            <h2 id="tops">TOPS</h2>
            <hr>
-<div class="leg"> <img name="slide"></div>
+<div class="leg"><img name="slide" alt="pictures of brallets"></div>
             <hr>
             <h2 id="sets"> Bikini sets</h2>
             <hr>
-<div class="leg"> <img name="two"></div>
+<div class="leg"> <img name="two" alt="bikini pictures"></div>
             <hr>
             <hr>
          <h2 id="tote">Tote bag</h2>
          <hr>
-         <img src="new4.jpg" alt="">
+         <img src="new4.jpg" alt="tote bag">
               <hr>
          <h2 id="skirts">Skirts</h2>
          <hr>
-         <img src="pic12.jpg" alt="">
+         <img src="pic12.jpg" alt="skirt">
        </div>        
    </section>
    <section>
