--- a/index.html
+++ b/index.html
@@ -30,17 +30,14 @@
     <div class="try">
      <h2 class="spa">WHAT I MAKE</h2>
      <h4>BRALLETES</h4>
-     <img src="pic1.jpg"height =250px  width="100%"alt="A bikini"> 
+     <img src="pic1.jpg"height =250px alt="A bikini"> 
      <hr> 
      <img src="pic2.jpg"height =250px alt="A bra"> 
      <hr>
-     <img src="pic5.jpg"height =250px length=100px alt="A bra"> 
+     <img src="pic5.jpg"height =250px alt="A bra"> 
     </div>
    </section>
-   <section > 
-   <footer>
-    <h6>IFADAA WEB DESIGN COPYRIGHT  @2023</h6>
-   </footer>
-   </section>
+   
+ 
 </body>
 </html>
