--- a/about.html
+++ b/about.html
@@ -9,8 +9,9 @@
     <meta name="description" content="Welcome to my aesthetic crochet business, where I create handmade, one-of-a-kind pieces for customers who appreciate the artistry and craftsmanship of crochet. We make our products using acrylic  and yarns sourced  right here in kenya to create beautiful and unique pieces that are both functional and stylish. From cozy brallets and scarves to delicate Bikini's we offer a wide range of crochet products that are perfect for any occasion or setting. In addition to our ready-made products, we also offer custom orders and personalized designs to meet the specific needs and preferences of our customers Whether you're looking for a special gift or a beautiful addition , our crochet creations are sure to impress. Shop with us today !">
 <meta name="keywords" content="crotchet, handmade, kenya Nairobi,custom made,about ellecrotchet">
 
-    <title>ellecrotchet</title>
-     <style>span{color:pink;
+    <title>ellecrotchet | about</title>
+    <style>*{padding:0;margin:0;}
+         span{color:pink;
         font-family: 'Brush Script MT',cursive;}        
         body{background-color:magenta}
         header{background-color:black;
@@ -36,7 +37,7 @@
             Height:65vh;
             overflow:hidden;}
        
-       footer{background-color:magenta;
+       footer{
             Text-align:center;
             padding:3.125rem;
             border:1px solid;}
