--- a/products.html
+++ b/products.html
@@ -37,9 +37,9 @@
       <h2 style="text-align:center;">Tops</h2>
       <hr>
    <section class="showcase">
-        <div class="image-container"><a href="product-single.html"><img src="thalia.jpg" alt=""></a><br><div class="title"><sub>Thalia Top</sub>     <sub >1000 ksh</sub></div> <div class="overlay">
+        <div class="image-container"><img src="thalia.jpg" alt=""><br><div class="title"><sub>Thalia Top</sub>     <sub >1000 ksh</sub></div> <div class="overlay">
     <p>THALIA TOP</p>
-    <button class="hover-btn" >Buy Now!</button>  </div></div>
+ <button class="hover-btn" ><a href="product-single.html">Buy Now!</a></button>  </div></div>
          <div class="image-container"><img src="maren.jpg" alt=""><br><div class="title"><sub>Maren</sub>     <sub >1000 ksh</sub></div> <div class="overlay">
     <p>Maren TOP</p>
     <button class="hover-btn" >Buy Now!</button>  </div></div>
@@ -73,8 +73,30 @@
        <h2 id="tops">TOPS</h2>
        <hr><br>
     <div><img name="slide" alt="pictures of brallets"></div></div>
-   </section>
-   
+   </section> 
+   <section class="slideshow">
+       <div>
+           <hr>
+        <h2 id="sets"> Bikini sets</h2>
+            <hr><br>
+<div><img name="two" alt="bikini pictures">
+</div><div>
+   </section> 
+   <section class="slideshow" >
+       <div>
+       <hr>
+         <h2 id="tote">Tote bag</h2>
+         <hr><br>
+         <div>
+         <img src="new4.jpg" alt="tote bag"></div></div></section>
+         <section class="slideshow"> 
+            <div>
+                <hr>            
+            <h2 id="skirts">Skirts</h2>
+         <hr><br>
+ <div>
+ <img src="pic12.jpg" alt="skirt"></div></div>
+   </section> 
    <footer>
  <div class="leg">
 <button id="toggle-button"><div class="hamburger">
